# PosturePerfection

./: .gitignore  CMakeLists.txt  PosturePerfection_install.sh  README.md  install.sh  install_dependencies.sh  test.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI.yml  cmake.yml  cpp-lint.yml  cpp-linter.yml  doxygen.yml  main.yml
assets/: README.md
docs/: Doxyfile  Gemfile  _config.yml  about-us.md  ci.md  components.md  doxygen-homepage.md  guidance.md  index.md  instructions.md  realtime.md  software-install.md  source-documentation.md  sys_design.md
docs/_sass/color_schemes/: custom.scss
docs/_site/: about-us.html  ci.html  components.html  guidance.html  index.html  source-documentation.html  sys_design.html
docs/_site/assets/js/: just-the-docs.js  search-data.json
docs/_site/html/search/: all_0.js
docs/_site/requirements/: requirements.html  spec.html  user-stories.html
docs/html/: CMakeLists_8txt.html  about-us_8md.html  annotated.html  broadcast__example_8cpp.html  broadcast__example_8cpp__incl.map  broadcast__example_8cpp__incl.md5  broadcaster_8cpp.html  broadcaster_8cpp__incl.map  broadcaster_8cpp__incl.md5  broadcaster_8h.html  broadcaster_8h__dep__incl.map  broadcaster_8h__dep__incl.md5  broadcaster_8h__incl.map  broadcaster_8h__incl.md5  broadcaster_8h_source.html  ci_8md.html  class-diagram_8md.html  classBuffer_1_1Buffer.html  classGUI_1_1Button.html  classGUI_1_1Button__coll__graph.map  classGUI_1_1Button__inherit__graph.md5  classGUI_1_1Label.html  classGUI_1_1Label__inherit__graph.map  classGUI_1_1Label__inherit__graph.md5  classGUI_1_1MainWindow.html  classGUI_1_1MainWindow__coll__graph.map  classGUI_1_1MainWindow__inherit__graph.md5  classGUI_1_1SettingsWindow.html  classGUI_1_1SettingsWindow__coll__graph.md5  classGUI_1_1SettingsWindow__inherit__graph.map  classIIR_1_1IIR2ndOrderFilter.html  classIIR_1_1IIRFilter.html  classInferenceCore.html  classInference_1_1InferenceCore.html  classNotify_1_1NotifyBroadcast.html  classNotify_1_1NotifyClient.html  classNotify_1_1NotifyReceiver.html  classNotify_1_1NotifyServer.html  classPipeline_1_1Buffer.html  classPipeline_1_1FrameGenerator.html  (+335 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  (+84 more)
docs/images/PlantUML/: class-diagram.puml  framegenerator.puml  inferencecore.puml  poseestimator.puml  postprocessor.puml  postureestimator.puml  preprocessor.plantuml  preprocessor.puml  sequence-diagram.plantuml
docs/requirements/: requirements.md  spec.md  user-stories.md  wireframes.md
docs/system/: class-diagram.md  sequence-diagram.md  system-design.md  system.md
models/: README.md
old-headers/interface/Header Files/: datapage.h  mainwindow.h
scripts/: build.sh  install_dependencies.sh
src/: CMakeLists.txt  datapage.h  doubler.cpp  doubler.h  framerate_settings.cpp  fullscreen.h  hello.cpp  hello.h  iir.cpp  iir.h  inference_core.cpp  inference_core.h  intermediate_structures.cpp  intermediate_structures.h  load_tensorflow.cpp  main.cpp  mainwindow.h  pipeline.cpp  pipeline.h  pose_estimating.h  post_processor.cpp  post_processor.h  posture_estimating.h  posture_estimator.cpp  posture_estimator.h  posture_in.c  posture_in.h  pre_processor.cpp  pre_processor.h
src/gui/: CMakeLists.txt  custom_widgets.cpp  datawindow.cpp  datawindow.h  estimator_gui_interface_test.cpp  gui  main.cpp  mainwindow.cpp  mainwindow.h  postureperfection  settingswindow.cpp  settingswindow.h  stylesheet.qss
src/gui/GUI_autogen/: moc_predefs.h
src/gui/PosturePerfection_gui_autogen/: moc_predefs.h
src/gui/interface/Header Files/: datapage.h  fullscreen.h  mainwindow.h  settingspage.h
src/gui/postureperfection_autogen/EWIEGA46WW/: moc_mainwindow.cpp
src/iir/: CMakeLists.txt  iir.cpp  iir.h
src/notifications/: CMakeLists.txt  NotificationBroadcast  NotificationClient  NotificationReceiver  NotificationServer  broadcast.cpp  broadcast.h  broadcast_example.cpp  broadcaster.cpp  broadcaster.h  client  client.cpp  client.h  client_main.cpp  notify.cpp  notify.h  old_client.cpp  old_server.cpp  pi_client  pi_client.cpp  pi_server  pi_server.cpp  receiver.cpp  receiver.h  receiver_example.cpp  serv  server  server.cpp  server.h  server_main.cpp
test/: CMakeLists.txt  test.cpp  test_doubler.cpp  test_iir.cpp  test_notifications.cpp  test_post_processor.cpp  test_posture_estimator.cpp  test_pre_processor.cpp
